--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 {
 "version":"1.2",
 "aviso":"BELLARA BLRX VIP",
-"massage":"INJECTOR EXPIRED UPDATE THE INJECTOR\n\nUPDATED INJECTOR AVAILABLE ON CHANNEL BELLARA BLRX\n/nADDED MORE NEW FEATURES\n\nTHANK YOU GUYS",
+"massage":"INJECTOR EXPIRED UPDATE THE INJECTOR\n\nUPDATED INJECTOR AVAILABLE ON CHANNEL BELLARA BLRX\n\nADDED MORE NEW FEATURES\n\nTHANK YOU GUYS",
 "okay":"UPDATE NOW",
 "link":"https://youtu.be/YtsI4eRQ5O8"
 }
